# akareko

./: .gitignore  Cargo.toml  Plan  README.md  build.rs  config.toml  flake.nix  rustfmt.toml  test.bat
.cargo/: config.toml
anawt/: Cargo.toml
benches/: db_benchmark.rs
byteable-derive/: Cargo.toml
byteable-derive/src/: lib.rs
lt-rs/: Cargo.toml  build.rs
lt-rs/src/alerts/: mod.rs
migrations/sqlite/: migration_1.sql
src/: config.rs  errors.rs  helpers.rs  lib.rs  main.rs  models.rs
src/db/: mod.rs
src/db/comments/: mod.rs  surreal.rs
src/db/event/: mod.rs
src/db/index/: content.rs  metadata.rs  mod.rs  sqlite.rs  surreal.rs  tags.rs
src/db/user/: mod.rs  sqlite.rs  surreal.rs
src/hash/: keys.rs  mod.rs
src/helpers/: bloom_filter.rs  byteable.rs  serde_byteable.rs
src/server/: mod.rs  proxy.rs
src/server/client/: mod.rs
src/server/handler/: macros.rs  mod.rs
src/server/handler/events/: sync_events.rs
src/server/handler/index/: exchange_content.rs  get_all_indexes.rs  get_content.rs  get_contents.rs  get_indexes.rs  mod.rs
src/server/handler/post/: get_posts_by_topic.rs
src/server/handler/relay/: post_content.rs
src/server/handler/users/: get_users.rs  mod.rs  who.rs
src/server/protocol/: byteable.rs  mod.rs
src/types/: keys.rs  mod.rs  string.rs  timestamp.rs  topic.rs
src/ui/: app_manager.rs  icons.rs  mod.rs  theme.rs  tray.rs
src/ui/components/: content_entry.rs  mod.rs  modal.rs  novel_chapter.rs  toast.rs
src/ui/components/modal/: add_who.rs
src/ui/queries/: fetch_contents.rs  mod.rs
src/ui/queries/content/: fetch_mangadex_chapters.rs
src/ui/queries/follow/: follow_content.rs
src/ui/queries/index/: fetch_cover.rs
src/ui/queries/torrent/: fetch_torrent_watchers.rs  remove_torrent.rs
src/ui/router/: home.rs  mod.rs  settings.rs  torrents.rs
src/ui/router/manga/: chapter_viewer.rs  config.rs  manga.rs  manga_list.rs
src/ui/style/: mod.rs
src/ui/views/: add_chapter.rs  add_novel.rs  database_viewer.rs  home.rs  image_viewer.rs  mod.rs  novel.rs  novel_list.rs  post.rs  settings.rs  user_list.rs
