[package]
name = "aurora"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "net",
] }
julian = "0.7.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.141"
toml = "0.9.2"
url = "2.5.4"
# diesel = { version = "2.2.12", features = ["sqlite", "r2d2"] }
# diesel_migrations = "2.2.0"
surrealdb = { version = "2.3.7", features = ["kv-surrealkv"] }
async-trait = "0.1.89"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.0"
unicode-normalization = "0.1.24"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "local-time",
] }
time = "0.3.41"
sha2 = "0.10.9"
base64 = "0.22.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

dirs = "6.0.0"
futures = "0.3.31"

tokio-util = { version = "0.7.16", features = ["compat", "io", "io-util"] }

yosemite = "0.5.0"

config = "0.15.16"
data-encoding = "2.9.0"
paste = "1.0.15"
byteable-derive = { path = "./byteable-derive" }
cxx = "1.0.186"
bitflags = "2.9.4"
anawt = { git = "https://github.com/pliduino/anawt.git", branch = "develop" }
iced = { version = "0.13.1", features = ["tokio", "image"] }
iced_aw = "0.12.2"
zip = "5.1.1"
bytes = "1.10.1"
error_set = "0.9.0"
rclite = "0.3.0"
lt-rs = "0.1.0"

[features]
default = []
lto = ["anawt/lto"]

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
features = ["lto"]
