[package]
name = "lt-rs"
version = "0.1.0"
edition = "2024"
description = "Libtorrent bindings for rust"
repository = "https://github.com/pliduino/lt-rs"

[lints.rust]
dead_code = "allow"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2025.06.13"
dependencies = ["libtorrent"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static", dependencies = [
    "libtorrent",
] }

[dependencies]
tracing = "0.1.41"
cxx = "1.0.186"
bitflags = "2.9.4"
thiserror = "2.0.16"
base64 = "0.22.1"

[build-dependencies]
cxx-build = "1.0.186"
vcpkg = "0.2.15"

# [profile.release]
# lto = true
# strip = true
# opt-level = 3
# panic = "abort"
# codegen-units = 1
